--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
       <li class="nav-item">
         <a class="nav-link" href="https://www.instagram.com/_mr_developer"><i class="fab fa-instagram"></i><span> Instagram</span></a>
       </li>
+      
+      <li class="nav-item">
+        <a class="nav-link" href="https://github.com/devmohit-live"><i class="fab fa-github"></i><span> Github</span></a>
+      </li>
 
        <li class="nav-item dropdown active">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
