positioned images updated

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     <div class="row content">
       <div class="col-sm-4 sidenav">
         <div class="thumbnail">
-          <img src="https://pbs.twimg.com/profile_images/1079008384026738690/tNe8Ou7__400x400.jpg"  alt="Me" style="width:100%" />
+          <img src="https://scontent-bom1-1.xx.fbcdn.net/v/t1.0-9/52702585_2075036575946865_5804674353815617536_n.jpg?_nc_cat=103&_nc_ht=scontent-bom1-1.xx&oh=a55fdd3985fac68c6f378b3212083535&oe=5CE5A55E"  alt="Me" style="width:418px" height="450px" />
         </div>
 
       <div class="grey">
