--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@
         <a class="nav-link disabled" href="#">Admin</a>
       </li>
     </ul>
-    <form class="form-inline my-2 my-lg-0">
+    <!-- <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="search" placeholder="Dummy Search" aria-label="Search">
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
+    </form> -->
   </div>
 </nav>
 
@@ -120,16 +120,12 @@
     <div class="row content">
       <div class="col-sm-4 sidenav">
         <div class="thumbnail">
-          <img src="https://pbs.twimg.com/profile_images/1101017664565047296/HjsAtquu_400x400.png"  alt="Me" />
+          <img src="https://pbs.twimg.com/profile_images/1101017664565047296/HjsAtquu_400x400.png"  alt="Me" / style="width: 420px">
         </div>
 
       <div class="grey">
         <h2 class="bg-info  fnt " align="center"><b>Mohit Singh</b></h2>
-        <!-- <div class="neon-wrapper " style="width: 100%">
-     <span class="txt">MOHIT SINGH</span>
-     <span class="gradient"></span>
-     <span class="dodge"></span>
-</div> -->
+        
         <p class="badge-danger fnt" align="center"><b>Learner</b>,<br><b>Information Technology at KNIT Sultanpur</b>,<br><b>Web Developer at Drishticone(KNIT)</b></p>
       </div>
       </div>
