--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     <div class="row content">
       <div class="col-sm-4 sidenav">
         <div class="thumbnail">
-          <img src="https://pbs.twimg.com/profile_images/1101017664565047296/HjsAtquu_400x400.png"  alt="Me" / style="width: 420px">
+          <img src="https://pbs.twimg.com/profile_images/1101017664565047296/HjsAtquu_400x400.png"  alt="Me" / style="width: 100%">
         </div>
 
       <div class="grey">
