--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-eqiv="X-UA-Compatible" content="ie=edge"> 
+  <link rel="shortcut icon" href="fav.ico" type="image/x-icon" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
   <link href="https://fonts.googleapis.com/css?family=Francois+One" rel="stylesheet">
-  <link rel="icon" type="image/png" href="favicon.ico">
+<!--   <link rel="icon" type="image/png" href="favicon.ico"> -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
   <link rel="stylesheet" href="https://devmohit-live.github.io/style.css">
   <title>About Me</title>
