--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>I Write Code</title>
   <meta charset="UTF-8">
+  <meta name="google-site-verification" content="W2Mre8ZIVXJLuLGdLeeycojswJoLLKgcgWBz8NqGBok" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-eqiv="X-UA-Compatible" content="ie=edge"> 
   <link rel="shortcut icon" href="fav.ico" type="image/x-icon" />
