--- a/index.html
+++ b/index.html
@@ -50,8 +50,16 @@
         <a class="nav-link" href="about.html">About Me <span class="sr-only">(current)</span></a>
       </li> -->
       <li class="nav-item">
-        <a class="nav-link" href="https://www.instagram.com/_mr_developer"><i class="fab fa-instagram"></i><span> Instagram</span></a>
+        <a class="nav-link" href="https://www.instagram.com/mr_developer.py"><i class="fab fa-instagram"></i><span> Instagram</span></a>
       </li>
+
+      <li class="nav-item">
+        <a class="nav-link" href="jarvis.html"><span> Assist</span></a>
+        <!-- <a class="nav-link" href=""><i class="fab fa-instagram"></i><span> Assist</span></a> -->
+      </li>
+
+
+
       
       <li class="nav-item">
         <a class="nav-link" href="https://github.com/devmohit-live"><i class="fab fa-github"></i><span> Github</span></a>
