--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <!-- navbar here -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <a class="navbar-brand" href="https://devmohit-live.github.io/">
-    <img src="https://pbs.twimg.com/profile_images/1101017664565047296/HjsAtquu_400x400.png" width="40" height="30"  class="d-inline-block align-top" alt="">
+    <img src="https://pbs.twimg.com/profile_images/1101017664565047296/HjsAtquu_400x400.png"  class="d-inline-block align-top" alt="">
     Home
   </a>
 
