--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <a class="nav-link" href="about.html">About Me <span class="sr-only">(current)</span></a>
       </li> -->
       <li class="nav-item">
-        <a class="nav-link" href="https://www.instagram.com/mr_developer.py"><i class="fab fa-instagram"></i><span> Instagram</span></a>
+        <a class="nav-link" href="https://www.instagram.com/mr_developer.code"><i class="fab fa-instagram"></i><span> Instagram</span></a>
       </li>
 
       <li class="nav-item">
@@ -73,15 +73,15 @@
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item btn btn-outline-primary" href="#">Java</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item btn-outline-primary" href="#">HTML</a>
+          <a class="dropdown-item btn-outline-primary" href="#">Pytho</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">C</a>
+          <a class="dropdown-item" href="#">React-Native</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item btn-outline-primary" href="#">Bootstrap</a>
+          <a class="dropdown-item btn-outline-primary" href="#">Docker</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item btn-outline-primary" href="#">Python</a>
+          <a class="dropdown-item btn-outline-primary" href="#">Machine Learning</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item btn-outline-primary" href="#">Dart</a>
+          <a class="dropdown-item btn-outline-primary" href="#">Linux (RedHat8)</a>
         </div>
       </li>
 
@@ -92,18 +92,11 @@
           Noob in
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item btn btn-outline-primary" href="#">CSS</a>
-          <div class="dropdown-divider"></div>
-         <a class="dropdown-item btn btn-outline-primary" href="#">JavaScript</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item btn btn-outline-primary" href="#">Arm Assembly</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item btn btn-outline-primary" href="#">x86 Assembly</a>
+          <a class="dropdown-item btn btn-outline-primary" href="#">Web Development</a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item btn btn-outline-primary" href="#">Flutter</a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item btn btn-outline-primary" href="#">PHP</a>
-
         </div>
       </li>
 
